# atocut

./: .gitignore  CMakeLists.txt  README.md
include/: atocut.h
src/: atocut.c
